fix: add line-heights to footer elements - Gives the Sparkbox link and the the contact info a little more room. - Keeps the Sparkbox link from overlapping the text above

--- a/src/scss/_components.footer.scss
+++ b/src/scss/_components.footer.scss
@@ -24,6 +24,7 @@
     font-size: 0.875rem;
     font-weight: normal;
     padding: 0.75rem 0 0.75rem 4rem;
+    line-height: 1.25;
   }
 
   &__link {
@@ -177,6 +178,7 @@
   &__contact-info {
     margin: 0;
     font-size: 1.125rem;
+    line-height: 1.5;
   }
 
   &__social-list {
